# window-12-

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-iso.yml  ci.yml  nightly-compat.yml  package-preview.yml
apps/extractx/: extractx.py
apps/extractx/ui/: index.html  styles.css
crates/aid/: Cargo.toml
crates/aid/src/: main.rs  service.rs
crates/browserd/: Cargo.toml
crates/browserd/src/: main.rs
crates/compatd/: Cargo.toml
crates/compatd/src/: main.rs  service.rs
crates/fsd/: Cargo.toml
crates/platform-contracts/: Cargo.toml
crates/regd/: Cargo.toml
crates/shelld/: Cargo.toml
crates/updated/: Cargo.toml
docs/: 01-architecture-plan.md  02-kernel-and-compatibility.md  03-ui-system-design.md  04-build-roadmap.md  05-mvp-prototype-plan.md  06-tech-stack.md
docs/full-os/: 01-full-replacement-architecture.md  02-subsystem-contracts.md  03-browser-and-app-stack.md  04-install-ready-iso-and-usb.md
installer/: README.md
installer/profiles/: dev-preview.env
installer/scripts/: build-dev-preview.sh  build-iso-linux.sh  test-in-qemu.sh
installer/usb/: README.md  write-usb-linux.sh  write-usb-macos.sh
os/: system-manifest.yaml
os/apps/: builtin-apps.yaml  core-app-catalog.yaml
os/browser/: browser-manifest.yaml
os/compat/: winapi-coverage.csv
planning/: issues.md  sprint-board.md
planning/full-os/: backlog.csv  roadmap.md
prototypes/web-os/: README.md  app.js  index.html  styles.css
scripts/: bootstrap-rust.sh
testing/: INSTALL_TEST_GUIDE.md
testing/extractx/: smoke_extractx.sh
testing/fixtures/: README.md
(+18 files in other folders)
