[workspace]
members = [
  "crates/platform-contracts",
  "crates/compatd",
  "crates/updated",
  "crates/aid",
  "crates/shelld",
  "crates/regd",
  "crates/fsd",
  "crates/browserd",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Windows12-style OS Team"]
